Fix: Remove unwanted scrollbars

--- a/src/pages/CPGG/CPGG.module.css
+++ b/src/pages/CPGG/CPGG.module.css
@@ -1,9 +1,9 @@
 .pageContainer {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  max-height: 100vh;
-  overflow: hidden;
+  height: 100vh !important;
+  max-height: 100vh !important;
+  overflow: hidden !important;
 }
 
 .cpgg {
@@ -14,7 +14,7 @@
   font-size: 16px;
   line-height: 30px;
   color: #fff;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .Title ul {
