--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -1,15 +1,16 @@
 .pageContainer {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  overflow: hidden;
+  height: 100vh !important;
+  max-height: 100vh !important;
+  overflow: hidden !important;
 }
 
 .history {
   flex: 1;
   padding: 2rem;
   margin-bottom: 40px;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .title {
