--- a/src/pages/Regulations/Regulations.module.css
+++ b/src/pages/Regulations/Regulations.module.css
@@ -1,8 +1,9 @@
 .pageContainer {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  overflow: hidden;
+  height: 100vh !important;
+  max-height: 100vh !important;
+  overflow: hidden !important;
 }
 
 .regulations {
@@ -11,7 +12,7 @@
   margin-bottom: -30px;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .title {
